added a scroll indicator.

--- a/app/index.html
+++ b/app/index.html
@@ -29,14 +29,14 @@
 				<i class="fa fa-heart" aria-hidden="true"></i>
 				favorites (<span id="fav-text">0</span>)	
 			</div>
-		
+			<div id="bar" class="bar">
+				<div id="progress" class="progress"></div>
+			</div>
 		</div>
 
 		<div class="view">
-
 			<div id="theDiv"></div>
 			<div id="output"></div>
-
 		</div>
 		
 	</div>
