added refresh text to  html page.

--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,7 @@
 		<div class="header">
 			<div id="load-feed" class="load-feed">
 				<i class="fa fa-reddit-alien" aria-hidden="true"></i>
-				/Ray/analog
+				/refresh
 			</div>
 			<div id="favorites" class="favorites">
 				<i class="fa fa-heart" aria-hidden="true"></i>
